--- a/app/views/spree/order_mailer/confirm_email.text.erb
+++ b/app/views/spree/order_mailer/confirm_email.text.erb
@@ -19,13 +19,13 @@
 
 <%= t('order_mailer.confirm_email.thanks') %>
 
-You can log in to track your order and manage your account: <%= login_url %>
+To track your order or manage your personal details, log in to your account here: <%= login_url %>
 
 <% if @order.user && @order.user.automagically_registered?  %>
-If you're a new customer, we've set up an account for you.
+We have automatically created an account for your convenience where you can track your order and manage your personal details.
 
 Your username is: <%= @order.email %>
 Your temporary password is: <%= @order.number %>
 
-We suggest you change this password once you've logged in
+Please change this password once you have logged in.
 <% end %>
