[copy] Update registration call to action during checkout

--- a/app/views/spree/checkout/_address_step.html.slim
+++ b/app/views/spree/checkout/_address_step.html.slim
@@ -7,7 +7,7 @@
     h2.checkout-section-title Log In or Create an Account
     .row
       .col-md-12.form-group
-        p Create an account to Track Your Order.
+        p Create an account to track your order, manage your personal details and get access to great members-only offers.
         p = link_to t(:create_a_new_account), spree.signup_path(cl: 'login-form'), class: 'btn btn-block btn-black btn-md low-btn'
     .row
       .col-md-6.form-group
