--- a/app/views/spree/checkout/_address_step.html.slim
+++ b/app/views/spree/checkout/_address_step.html.slim
@@ -4,17 +4,17 @@
 - if current_step.eql?('address')
 
   - if not signed_in?
-    h2.checkout-section-title Log In or Create an Account
-    .row
-      .col-md-12.form-group
-        p Create an account to track your order, manage your personal details and get access to great members-only offers.
-        p = link_to t(:create_a_new_account), spree.signup_path(cl: 'login-form'), class: 'btn btn-block btn-black btn-md low-btn'
+    h2.checkout-section-title Log In if you have an account
     .row
       .col-md-6.form-group
         = link_to 'log in', login_path, class: 'btn btn-block btn-black btn-md open-login-popup'
       .col-md-6.form-group
         = link_to 'Sign in with Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-black btn-md fb-login'
-
+      .col-md-12.form-group
+        p
+          | An account lets you track your order, manage your personal details and get access to great members-only offers.
+          br
+          = link_to t(:create_a_new_account), spree.signup_path, class: ''
   = form_for @order, url: update_checkout_path(current_step), html: {class: 'form-global checkout-form'}, remote: false do |form|
     = render :partial => 'shared/error_messages', locals: { target: @order }
 
