--- a/app/views/products/collections/_product.html.slim
+++ b/app/views/products/collections/_product.html.slim
@@ -12,6 +12,6 @@
           sup +
           | moodboard
   - if product.fast_making
-	 = image_tag src='express_making.png', class: 'express-delivery'
+	 = image_tag src='express_making.png', class: 'express-delivery', alt: "Express Making"
   - if product.fast_delivery
-	 = image_tag src='express_delivery.png', class: 'express-delivery'
+	 = image_tag src='express_delivery.png', class: 'express-delivery', alt: "Express Delivery"
