[feat] Add plus-size to mega menu

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -114,6 +114,7 @@ ruby:
                     .col-md-3.col-lg-2
                       h4.link-header Style
                       ul.mega-menu-list
+                        li.mega-menu-list--item= link_to 'Plus Size', build_taxon_path('Plus Size'), title: "Plus-Szie Dresses"
                         li.mega-menu-list--item= link_to 'Two-Piece', build_taxon_path('Two Piece'), title: "Two-Piece Dresses"
                         li.mega-menu-list--item= link_to 'One Shoulder', build_taxon_path('One-Shoulder'), title: "One Shoulder Dresses"
                         li.mega-menu-list--item= link_to 'Strapless', build_taxon_path('Strapless'), title: "Strapless Dresses"
