[copy] Make it clear it's not a booking form

--- a/app/assets/stylesheets/redesign/style_session.css.scss
+++ b/app/assets/stylesheets/redesign/style_session.css.scss
@@ -5,6 +5,9 @@
   background-repeat: no-repeat;
 }
 
+.style-session .form {
+  width: 450px;
+}
 .page-title.style-session {
   background-color: black;
   text-align: center;
