[feat] banner banner banner

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -4,20 +4,20 @@ x.page-content.index
       = link_to here_comes_the_sun_collection_path
         = image_tag "home-page-tiles/here-comes-the-sun-#{current_site_version.code}.jpg", alt: 'Here comes the Sun', class: 'img-responsive portrait-img'
     li
+      = link_to all_size_collection_path
+        = image_tag "home-page-tiles/i-will-have-what-she-is-having.jpg", alt: 'I will have what she is having', class: 'img-responsive portrait-img'
+    li
+      = link_to bridesmaid_collection_path
+        = image_tag "home-page-tiles/bridesmaids.jpg", alt: 'Besties & Bridesmaids', class: 'img-responsive portrait-img'
+    li
       = link_to dresses_path
         = image_tag "home-page-tiles/taste-of-fame.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'
-    li
-      = link_to all_size_collection_path
-        = image_tag "home-page-tiles/i-will-have-what-she-is-having.jpg", alt: 'All Size', class: 'img-responsive portrait-img'
     li
       = link_to build_taxon_path('Graduation')
         = image_tag "home-page-tiles/graduation-#{current_site_version.code}.jpg", alt: 'Graduation Dresses', class: 'img-responsive portrait-img'
     li
       = link_to prom_collection_path
         = image_tag "home-page-tiles/prom.jpg", alt: 'Prom Collection', class: 'img-responsive portrait-img'
-    li
-      = link_to bridesmaid_collection_path
-        = image_tag "home-page-tiles/bridesmaids.jpg", alt: 'Bridesmaid Dresses', class: 'img-responsive portrait-img'
 
 
 /! Email Subscription
