--- a/app/views/landing_pages/bridesmaids.html.slim
+++ b/app/views/landing_pages/bridesmaids.html.slim
@@ -9,8 +9,7 @@
 
   .page-content.products-collections.category
     .container.relative.products-collection
-      - all_products = get_products_from_edit('Bridesmaid14', nil, nil, 20)
-      - other_products = get_products_from_edit('BridesmaidOther', nil, nil, 99)
+      - all_products = get_products_from_edit('Bridesmaid14', nil, nil, 28)
 
       =render :partial => '/landing_pages/products_four', :locals => { :products => all_products.slice(0, 4) }
 
@@ -39,7 +38,5 @@
       - all_products.drop(12).each_slice(4) do |products|
         =render :partial => '/landing_pages/products_four', :locals => { :products => products }
 
-      .row.text-center
-        h2 More Bridesmaid Dresses
-      - other_products.each_slice(4) do |products|
-        =render :partial => '/landing_pages/products_four', :locals => { :products => products }
+      .row.relative.more-products
+          = link_to 'More Dresses', "/#{current_site_version.code}/dresses", class: 'btn btn-black'
