--- a/app/views/admin/bulk_order_updates/index.html.slim
+++ b/app/views/admin/bulk_order_updates/index.html.slim
@@ -2,18 +2,22 @@
 
 table
   thead : tr
+    th id
     th Created On
     th Created By
     th Filename
     th Total Items
-    th id
-    th action
+    - Admin::LineItemUpdate::PROCESS_STATES.each do |state_name|
+      th class="bulk_update #{state_name}" = state_name.capitalize
+    th colspan=2 actions
   tbody
     - collection.each do |bulk|
       tr
+        td = bulk.id
         td = bulk.created_at
         td = bulk.user
         td = bulk.filename
-        td = bulk.line_item_updates.count
-        td = bulk.id
+        td = bulk.total_items
+        - Admin::LineItemUpdate::PROCESS_STATES.each do |state_name|
+          td = bulk.item_states[state_name.to_s]
         td = link_to('View', bulk)
