[ref][views] whitespace and capitalisation

--- a/app/views/statics/size_guides_lp.html.slim
+++ b/app/views/statics/size_guides_lp.html.slim
@@ -12,15 +12,15 @@
 
       h2 Old Size Guide
 
-      =render './products/details/size_guide_old'
+      = render '/products/details/size_guide_old'
 
       h2 New Size Guide
 
-      =render './products/details/size_guide_new'
+      = render '/products/details/size_guide_new'
 
       h2 Plus Size Guide
 
-      =render './products/details/plus_size_size_guide'
+      = render '/products/details/plus_size_size_guide'
 
 
       p As you will see, our sizing has become a bit smaller, so for our new styles, you might want to order your dress in a bigger size than you used to.
