[feat][views] merge new and plus size guides

--- a/app/assets/stylesheets/redesign/_tables.css.scss
+++ b/app/assets/stylesheets/redesign/_tables.css.scss
@@ -44,7 +44,7 @@
     content: attr(data-title);
   }
 
-  .table.plus-size-size-guide, .table.new-size-guide, .table.old-size-guide {
+  .table.size-guide {
     td {
       padding-left: 40%;
     }
