--- a/app/views/products/details/_size_guide_new.html.slim
+++ b/app/views/products/details/_size_guide_new.html.slim
@@ -1,6 +1,6 @@
 .container
   .row
-    table.table.new-size-guide
+    table.table.size-guide
       thead
         tr
           th colspan='3' Sizes
@@ -88,3 +88,43 @@
           td data-title="Waist Inches" 33
           td data-title="Hip cm" 109
           td data-title="Hip Inches" 45
+        tr
+          td data-title="Size Aus/UK" 18
+          td data-title="Size US" 14
+          td data-title="Size DE" 46
+          td data-title="Bust cm" 109
+          td data-title="Bust Inches" 43
+          td data-title="Waist cm" 91
+          td data-title="Waist Inches" 36
+          td data-title="Hip cm" 116.5
+          td data-title="Hip Inches" 46
+        tr
+          td data-title="Size Aus/UK" 20
+          td data-title="Size US" 16
+          td data-title="Size DE" 48
+          td data-title="Bust cm" 116
+          td data-title="Bust Inches" 46
+          td data-title="Waist cm" 98
+          td data-title="Waist Inches" 39
+          td data-title="Hip cm" 123.5
+          td data-title="Hip Inches" 49
+        tr
+          td data-title="Size Aus/UK" 22
+          td data-title="Size US" 18
+          td data-title="Size DE" 50
+          td data-title="Bust cm" 123
+          td data-title="Bust Inches" 48
+          td data-title="Waist cm" 105
+          td data-title="Waist Inches" 41
+          td data-title="Hip cm" 130.5
+          td data-title="Hip Inches" 51
+        tr
+          td data-title="Size Aus/UK" 24
+          td data-title="Size US" 20
+          td data-title="Size DE" 52
+          td data-title="Bust cm" 130
+          td data-title="Bust Inches" 51
+          td data-title="Waist cm" 112
+          td data-title="Waist Inches" 44
+          td data-title="Hip cm" 137.5
+          td data-title="Hip Inches" 54
