--- a/app/views/products/details/_size_guide_old.html.slim
+++ b/app/views/products/details/_size_guide_old.html.slim
@@ -1,6 +1,6 @@
 .container
   .row
-    table.table.old-size-guide
+    table.table.size-guide
       thead
         tr
           th colspan='3' Sizes
