[ref][views] replace html with size datastructure, add sizes 26,28,30

--- a/app/views/products/details/_size_guide_new.html.slim
+++ b/app/views/products/details/_size_guide_new.html.slim
@@ -18,113 +18,7 @@
           td.sub-heading Inches
           td.sub-heading cm
           td.sub-heading Inches
-        tr
-          td data-title="Size Aus/UK" 4
-          td data-title="Size US" 0
-          td data-title="Size DE" 32
-          td data-title="Bust cm" 78
-          td data-title="Bust Inches" 31
-          td data-title="Waist cm" 60
-          td data-title="Waist Inches" 24
-          td data-title="Hip cm" 84
-          td data-title="Hip Inches" 35
-        tr
-          td data-title="Size Aus/UK" 6
-          td data-title="Size US" 2
-          td data-title="Size DE" 34
-          td data-title="Bust cm" 80.5
-          td data-title="Bust Inches" 32
-          td data-title="Waist cm" 62.5
-          td data-title="Waist Inches" 25
-          td data-title="Hip cm" 86.5
-          td data-title="Hip Inches" 36
-        tr
-          td data-title="Size Aus/UK" 8
-          td data-title="Size US" 4
-          td data-title="Size DE" 36
-          td data-title="Bust cm" 83
-          td data-title="Bust Inches" 33
-          td data-title="Waist cm" 65
-          td data-title="Waist Inches" 26
-          td data-title="Hip cm" 89
-          td data-title="Hip Inches" 37
-        tr
-          td data-title="Size Aus/UK" 10
-          td data-title="Size US" 6
-          td data-title="Size DE" 38
-          td data-title="Bust cm" 88
-          td data-title="Bust Inches" 35
-          td data-title="Waist cm" 70
-          td data-title="Waist Inches" 28
-          td data-title="Hip cm" 94
-          td data-title="Hip Inches" 39
-        tr
-          td data-title="Size Aus/UK" 12
-          td data-title="Size US" 8
-          td data-title="Size DE" 37
-          td data-title="Bust cm" 93
-          td data-title="Bust Inches" 37
-          td data-title="Waist cm" 75
-          td data-title="Waist Inches" 30
-          td data-title="Hip cm" 99
-          td data-title="Hip Inches" 41
-        tr
-          td data-title="Size Aus/UK" 14
-          td data-title="Size US" 10
-          td data-title="Size DE" 42
-          td data-title="Bust cm" 98
-          td data-title="Bust Inches" 39
-          td data-title="Waist cm" 80
-          td data-title="Waist Inches" 31
-          td data-title="Hip cm" 104
-          td data-title="Hip Inches" 43
-        tr
-          td data-title="Size Aus/UK" 16
-          td data-title="Size US" 12
-          td data-title="Size DE" 44
-          td data-title="Bust cm" 103
-          td data-title="Bust Inches" 41
-          td data-title="Waist cm" 85
-          td data-title="Waist Inches" 33
-          td data-title="Hip cm" 109
-          td data-title="Hip Inches" 45
-        tr
-          td data-title="Size Aus/UK" 18
-          td data-title="Size US" 14
-          td data-title="Size DE" 46
-          td data-title="Bust cm" 109
-          td data-title="Bust Inches" 43
-          td data-title="Waist cm" 91
-          td data-title="Waist Inches" 36
-          td data-title="Hip cm" 116.5
-          td data-title="Hip Inches" 46
-        tr
-          td data-title="Size Aus/UK" 20
-          td data-title="Size US" 16
-          td data-title="Size DE" 48
-          td data-title="Bust cm" 116
-          td data-title="Bust Inches" 46
-          td data-title="Waist cm" 98
-          td data-title="Waist Inches" 39
-          td data-title="Hip cm" 123.5
-          td data-title="Hip Inches" 49
-        tr
-          td data-title="Size Aus/UK" 22
-          td data-title="Size US" 18
-          td data-title="Size DE" 50
-          td data-title="Bust cm" 123
-          td data-title="Bust Inches" 48
-          td data-title="Waist cm" 105
-          td data-title="Waist Inches" 41
-          td data-title="Hip cm" 130.5
-          td data-title="Hip Inches" 51
-        tr
-          td data-title="Size Aus/UK" 24
-          td data-title="Size US" 20
-          td data-title="Size DE" 52
-          td data-title="Bust cm" 130
-          td data-title="Bust Inches" 51
-          td data-title="Waist cm" 112
-          td data-title="Waist Inches" 44
-          td data-title="Hip cm" 137.5
-          td data-title="Hip Inches" 54
+        - SizeChart::SIZE_CHART_2015.map do |size|
+          tr
+            - size.map do |key, value|
+              td data-title=key = value
