--- a/app/views/products/details/_size_guide_old.html.slim
+++ b/app/views/products/details/_size_guide_old.html.slim
@@ -18,123 +18,7 @@
           td.sub-heading Inches
           td.sub-heading cm
           td.sub-heading Inches
-        tr
-          td data-title="Size Aus/UK" 4
-          td data-title="Size US" 0
-          td data-title="Size DE" 32
-          td data-title="Bust cm" 81
-          td data-title="Bust Inches" 32
-          td data-title="Waist cm" 60
-          td data-title="Waist Inches" 24
-          td data-title="Hip cm" 91
-          td data-title="Hip Inches" 36
-        tr
-          td data-title="Size Aus/UK" 6
-          td data-title="Size US" 2
-          td data-title="Size DE" 34
-          td data-title="Bust cm" 84
-          td data-title="Bust Inches" 33
-          td data-title="Waist cm" 63
-          td data-title="Waist Inches" 25
-          td data-title="Hip cm" 92
-          td data-title="Hip Inches" 36
-        tr
-          td data-title="Size Aus/UK" 8
-          td data-title="Size US" 4
-          td data-title="Size DE" 36
-          td data-title="Bust cm" 87
-          td data-title="Bust Inches" 34
-          td data-title="Waist cm" 66
-          td data-title="Waist Inches" 26
-          td data-title="Hip cm" 95
-          td data-title="Hip Inches" 37
-        tr
-          td data-title="Size Aus/UK" 10
-          td data-title="Size US" 6
-          td data-title="Size DE" 38
-          td data-title="Bust cm" 92
-          td data-title="Bust Inches" 36
-          td data-title="Waist cm" 71
-          td data-title="Waist Inches" 28
-          td data-title="Hip cm" 100
-          td data-title="Hip Inches" 39
-        tr
-          td data-title="Size Aus/UK" 12
-          td data-title="Size US" 8
-          td data-title="Size DE" 40
-          td data-title="Bust cm" 97
-          td data-title="Bust Inches" 38
-          td data-title="Waist cm" 78
-          td data-title="Waist Inches" 31
-          td data-title="Hip cm" 105
-          td data-title="Hip Inches" 41
-        tr
-          td data-title="Size Aus/UK" 14
-          td data-title="Size US" 10
-          td data-title="Size DE" 42
-          td data-title="Bust cm" 102
-          td data-title="Bust Inches" 40
-          td data-title="Waist cm" 85
-          td data-title="Waist Inches" 33
-          td data-title="Hip cm" 110
-          td data-title="Hip Inches" 43
-        tr
-          td data-title="Size Aus/UK" 16
-          td data-title="Size US" 12
-          td data-title="Size DE" 44
-          td data-title="Bust cm" 107
-          td data-title="Bust Inches" 42
-          td data-title="Waist cm" 92
-          td data-title="Waist Inches" 36
-          td data-title="Hip cm" 115
-          td data-title="Hip Inches" 45
-        tr
-          td data-title="Size Aus/UK" 18
-          td data-title="Size US" 14
-          td data-title="Size DE" 46
-          td data-title="Bust cm" 112
-          td data-title="Bust Inches" 44
-          td data-title="Waist cm" 99
-          td data-title="Waist Inches" 39
-          td data-title="Hip cm" 120
-          td data-title="Hip Inches" 47
-        tr
-          td data-title="Size Aus/UK" 20
-          td data-title="Size US" 16
-          td data-title="Size DE" 48
-          td data-title="Bust cm" 117
-          td data-title="Bust Inches" 46
-          td data-title="Waist cm" 106
-          td data-title="Waist Inches" 42
-          td data-title="Hip cm" 125
-          td data-title="Hip Inches" 49
-        tr
-          td data-title="Size Aus/UK" 22
-          td data-title="Size US" 18
-          td data-title="Size DE" 50
-          td data-title="Bust cm" 122
-          td data-title="Bust Inches" 48
-          td data-title="Waist cm" 113
-          td data-title="Waist Inches" 44
-          td data-title="Hip cm" 130
-          td data-title="Hip Inches" 51
-        tr
-          td data-title="Size Aus/UK" 24
-          td data-title="Size US" 20
-          td data-title="Size DE" 52
-          td data-title="Bust cm" 128
-          td data-title="Bust Inches" 50
-          td data-title="Waist cm" 120
-          td data-title="Waist Inches" 47
-          td data-title="Hip cm" 136
-          td data-title="Hip Inches" 54
-        tr
-          td data-title="Size Aus/UK" 26
-          td data-title="Size US" 22
-          td data-title="Size DE" 54
-          td data-title="Bust cm" 134
-          td data-title="Bust Inches" 53
-          td data-title="Waist cm" 127
-          td data-title="Waist Inches" 50
-          td data-title="Hip cm" 142
-          td data-title="Hip Inches" 56
+        - SizeChart::SIZE_CHART_2014.map do |size|
+          tr
+            - size.map do |key, value|
+              td data-title=key = value
