--- a/app/views/spree/admin/orders/_squished_shipment_tracking_form.html.slim
+++ b/app/views/spree/admin/orders/_squished_shipment_tracking_form.html.slim
@@ -1,8 +1,11 @@
-- shipment = line_item.shipment
-- if total_items_in_order == 1
-  = render partial: 'shipment_tracking_number_form', locals: { line_item: line_item }
-- elsif shipment && shipment.shipped?
+- if shipment = line_item.shipment
+  - if shipment.shipped?
     = render partial: 'shipped_shipment_cells', locals: { shipment: shipment }
-- elsif total_items_in_order > 1 && position.zero?
-  td colspan=2 rowspan=total_items_in_order
-    = link_to 'Multiple Items In Order', admin_order_shipments_path(shipment.order), target: '_blank'
+  - elsif total_items_in_order == 1
+    = render partial: 'shipment_tracking_number_form', locals: { line_item: line_item }
+  - elsif total_items_in_order > 1 && position.zero?
+    td colspan=2 rowspan=total_items_in_order
+      = link_to 'Multiple Items In Order', admin_order_shipments_path(shipment.order), target: '_blank'
+- else
+  td colspan=2
+    ' No Shipment defined
