--- a/app/views/spree/admin/orders/_squished_shipment_tracking_form.html.slim
+++ b/app/views/spree/admin/orders/_squished_shipment_tracking_form.html.slim
@@ -1,6 +1,11 @@
 - if shipment = line_item.shipment
   - if shipment.shipped?
-    = render partial: 'shipped_shipment_cells', locals: { shipment: shipment }
+    - if shipment.tracking
+      td = link_to(shipment.tracking || '???', shipment.tracking_url, target: '_blank')
+    - else
+      td No Number
+    td
+      abbr title=shipment.shipped_at = l(shipment.shipped_at.to_date)
   - elsif total_items_in_order == 1
     = render partial: 'shipment_tracking_number_form', locals: { line_item: line_item }
   - elsif total_items_in_order > 1 && position.zero?
