[feat][views] swap on size_chart for size panel copy

--- a/app/views/products/details/_side_panel_sizes.html.slim
+++ b/app/views/products/details/_side_panel_sizes.html.slim
@@ -25,4 +25,10 @@
 
   .row
     .col-md-10.col-md-offset-1
+      h3
+        => @product.size_chart_explanation
+        ' Please check the fit guide for the perfect size.
+
+  .row
+    .col-md-10.col-md-offset-1
       button.btn-fit-guide.btn.btn-block.btn-secondary Fit Guide
