[feat][views] add size chart data to product presenter

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -212,7 +212,7 @@ hr
 = render :partial => 'data'
 
 #fit-guide-content.hidden
-  = render :partial => 'size_guide'
+  = render :partial => 'size_guide', :locals => { data: @product.size_chart_data, explanation: @product.size_chart_explanation }
 
 #product-overlay
 
