--- a/app/views/statics/size_guides_lp.html.slim
+++ b/app/views/statics/size_guides_lp.html.slim
@@ -12,11 +12,15 @@
 
       h2 Old Size Guide
 
-      = render '/products/details/size_guide_old'
+      .container
+        .row
+          = render partial: '/products/details/size_chart_table', locals: { data: SizeChart::SIZE_CHART_2014 }
 
       h2 New Size Guide
 
-      = render '/products/details/size_guide_new'
+      .container
+        .row
+          = render partial: '/products/details/size_chart_table', locals: { data: SizeChart::SIZE_CHART_2015 }
 
       p As you will see, our sizing has become a bit smaller, so for our new styles, you might want to order your dress in a bigger size than you used to.
 
