[style][views] wordsmithing

--- a/app/views/statics/size_guides_lp.html.slim
+++ b/app/views/statics/size_guides_lp.html.slim
@@ -8,7 +8,7 @@
     .row
       p We have recently changed our sizing and selected styles are now following new measurements. It is important for you to note that some styles will still come in our old sizing, whereas other styles will come in our new sizing.
 
-      p The 2 tables below are outlining the differences between our old and new size chart:
+      p The two tables below outline the differences between our old and new size chart:
 
       h2 Old Size Guide
 
