[feat][order confirm email] updated texts

--- a/app/views/spree/order_mailer/confirm_email.html.slim
+++ b/app/views/spree/order_mailer/confirm_email.html.slim
@@ -17,9 +17,14 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
               td height="30"
             tr
               td style="color: #666; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
-                p style="margin: 0 0 20px;" Hi #{@order.full_name},
+                p style="margin: 0 0 20px;"
+                  | Good news, your order #{ @order.number } has been placed.
                 p style="margin: 0;"
-                  | Thanks for shopping with Fame & Partners. Your order is being processed, and we'll send you another email to confirm when it has been shipped.
+                  | Thank you for shopping at Fame & Partners. We are so excited to send your order. You will receive another email with your tracking number once your order has been shipped.
+                p style="margin: 0;"
+                  | How long will your order take to arrive:
+                p style="margin: 0;"
+                  | Standard orders will be shipped within 7-10 Business days from order placement. If you have ordered a customized dress you will receive this within 10-14 business days.
             tr
               td height="30"
             tr
@@ -83,7 +88,17 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
                   p style="margin: 0;"
                     | Please change this password once you have logged in.
             tr
-              td height="40"
+              td style="color: #666; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
+                p style="margin: 0;"
+                  | When your order arrives: 
+                p style="margin: 0;"
+                  | Try it on! Here are some Handy tips:
+                p style="margin: 0;"
+                  | Keep all packaging in case you need to make a return, exchange or refund.
+                p style="margin: 0;"
+                  | Please make sure the dress is unworn and all tags are still attached.
+                p style="margin: 0;"
+                  | Please contact team@fameandpartners.com for a RMA number within 30 days of receiving your order.
             tr
               td style="color: #666; text-transform: uppercase; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 a href="http://fameandpartners.com/faqs" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" FAQ
