--- a/app/views/spree/admin/variants/index.html.erb
+++ b/app/views/spree/admin/variants/index.html.erb
@@ -19,13 +19,15 @@
     <thead data-hook="variants_header">
       <tr>
         <th colspan="2"><%= t(:options) %></th>
-        <th><%= t(:price) %></th>
+        <th><%= t(:price_aud) %></th>
+        <th><%= t(:price_usd) %></th>
         <th><%= t(:sku) %></th>
         <th><%= t(:on_hand) %></th>
         <th class="actions"></th>
       </tr>
     </thead>
     <tbody>
+
     <% @variants.each do |variant| %>
       <!-- you can skip variant with no options: that's just the default variant that all products have -->
       <% next if variant.option_values.empty? %>
@@ -34,7 +36,9 @@
             <span class="handle"></span>
           </td>
           <td><%= variant.options_text %></td>
-          <td class="align-center"><%= variant.display_price %></td>
+          <% variant.prices.sort_by(&:currency).each do |price| %>
+            <td class="align-center"><%= price.amount %> <%= price.currency %></td>
+          <%end%>
           <td class="align-center"><%= variant.sku %></td>
           <td class="align-center"><%= variant.on_hand %></td>
           <td class="actions">
