[tweak] Layout tweaks to sizes

--- a/app/assets/stylesheets/redesign/product/_size_menu.css.scss
+++ b/app/assets/stylesheets/redesign/product/_size_menu.css.scss
@@ -1,5 +1,11 @@
 #product-size-content {
 
+
+  .sizing-alert {
+    background-color: #eeddf0;
+    padding-bottom:2.5em;  
+  }
+
   .sizes-container {
     padding-right: 30px;
     padding-left: 30px;
