--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -14,7 +14,7 @@
         li.footer-nav--item
           = link_to 'FAQs & Shipping', faqs_path
         li.footer-nav--item
-          = link_to 'Sizing Guide', size_guide_path
+          = link_to 'Sizing Guide', size_guide_path, :style => 'color:red'
 
     .col-md-2.col-sm-3
       ul.footer-nav
