--- a/app/views/products/details/_side_panel_sizes.html.slim
+++ b/app/views/products/details/_side_panel_sizes.html.slim
@@ -2,6 +2,19 @@
 #product-size-content.product-side-panel
   button.close-btn
     = image_tag "cross.png", alt: 'close button'
+
+  .sizing-alert
+    .row
+      .col-md-10.col-md-offset-1
+        h3
+          => @product.size_chart_explanation
+          ' Please check the fit guide for the perfect size.
+
+    .row
+      .col-md-10.col-md-offset-1
+        button.btn-fit-guide.btn.btn-block.btn-secondary Fit Guide
+
+
   .sizes-container.grey
     .row
       .col-md-12.recommended
@@ -22,13 +35,3 @@
             .col-md-3.col-xs-3.col-xxs-6
               a.size-option.product-option href="#" data-id=size.id  data-name=size.presentation data-price=@product.custom_size_price
                 span.option-box.size-box= size.presentation.gsub(/\D/, '')
-
-  .row
-    .col-md-10.col-md-offset-1
-      h3
-        => @product.size_chart_explanation
-        ' Please check the fit guide for the perfect size.
-
-  .row
-    .col-md-10.col-md-offset-1
-      button.btn-fit-guide.btn.btn-block.btn-secondary Fit Guide
