--- a/app/views/statics/size_guide.html.slim
+++ b/app/views/statics/size_guide.html.slim
@@ -1,7 +1,10 @@
 .page-title.default
   .container
     .page-title--details
-      h1.no-padding-bottom FameBabes, be advised: We have changed our sizing!
+      h1.no-padding-bottom
+        | FameBabes, be advised:
+        br
+        | We have changed our sizing!
 
 .page-content.size-guide-lp
   .container
