--- a/app/assets/stylesheets/redesign/product/_size_menu.css.scss
+++ b/app/assets/stylesheets/redesign/product/_size_menu.css.scss
@@ -1,9 +1,8 @@
 #product-size-content {
 
-
-  .sizing-alert {
+  .size-alert {
     background-color: #eeddf0;
-    padding-bottom:2.5em;  
+    padding-bottom:2.5em;
   }
 
   .sizes-container {
