--- a/app/views/products/details/_side_panel_sizes.html.slim
+++ b/app/views/products/details/_side_panel_sizes.html.slim
@@ -3,7 +3,7 @@
   button.close-btn
     = image_tag "cross.png", alt: 'close button'
 
-  .sizing-alert
+  .size-alert
     .row
       .col-md-10.col-md-offset-1
         h3
