[tweak] More successfulch size

--- a/app/views/products/details/_size_guide.html.slim
+++ b/app/views/products/details/_size_guide.html.slim
@@ -2,10 +2,8 @@ h2.text-center Easy Size &amp; Measurement Guide
 .size-alert
   .row
     .col-md-12.col-xs-12.col-xxs-12
-      p
-        strong => explanation
-        br
-        ' Please check the size chart below.
+      h6= explanation
+      p Please check the size chart below.
 
 .container-fluid
   .row
