--- a/app/assets/stylesheets/redesign/product/_fit_guide.css.scss
+++ b/app/assets/stylesheets/redesign/product/_fit_guide.css.scss
@@ -13,7 +13,7 @@
 
     .size-alert {
       background-color: #eeddf0;
-      padding:1.5em;
+      padding:0.5em 1.5em 0.5em 1.5em;
       margin-bottom:1em;;
     }
 
